@@ -5,6 +5,8 @@ Changelog
 1.3.2 (unreleased)
 ------------------
 
+- Improve mopage body by using simple HTML. [jone]
+
 - Use simplelayout by default for news folders. [jone]
 
 
